--- a/react/package.json
+++ b/react/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-validation": "^3.0.7",
+    "universal-cookie": "^4.0.4",
     "validator": "^12.2.0"
   },
   "scripts": {
